--- a/index.html
+++ b/index.html
@@ -4,27 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-<h1>Welcome to my Portfolio</h1>
 
-<p>My name is Carlos Kruger.</p> 
+<div class="bigContainer">
+<div>
 
+    <h1>my Portfolio</h1>
 
-<a href="https://github.com/carloskruger">This is a link to my GitHub repository</a>
+    <h2>About</h2>
 
+<p>My name is Carlos Kruger. I am a full stack web developer. I have experience working with Node and Java Web applications.<a href="https://github.com/carloskruger">  This is a link to my GitHub repository</a></p>
+</div>
+<div>
 <h2>Skills</h2> 
 
-<p>Node|Javascript|Express|React|Redux|Java|Spring|SQL|PostgreSQL|Python</p>
-
+<p>Node | Javascript | Express | React | Redux | Java | Spring | SQL | PostgreSQL | Python</p>
+</div>
+<div>
 <h2>Projects</h2>
 
 <p><a href="http://tripplanneronline.com/">Trip Planner Project</a> is a project that can help you plan a trip by holding information relevant to the trip such as notes or pictures. You need to sign in. It was created with a node express back-end. It uses React and Redux in the front end and a PostgreSQL database.</p>
+<br>
+<br>
+<br>
+<p><a href="https://carloskruger.github.io/aguasdemarte/">Aguas de Marte</a> is a space game written with Canvas</p>
 
-
-
+</div>
+<div>
 <h2>Contact</h2>
 
 <p>My email is: carloskr@yahoo.com</p>
+</div>
+</div>
 </body>
 </html>
