--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
     <img src="img/7E7D07DB-6A26-4D98-94F7-A38CD1CCB782_1_105_c.jpeg" alt="Carlos Kruger" width="300px"/>
 </div>
 <div class="abouttext">
-    <p>My name is Carlos Kruger. I am a full stack web developer. I have experience working with Node and Java Web applications. I started working in technology many year ago in the mainframe area using COBOL. I like learning and trying new technologies.</p>
+    <p>My name is Carlos Kruger. I am a full-stack web developer. I have experience working with Node and Java web applications. I started working in technology many years ago in the mainframe area using COBOL. </p>
         <br> <br>
-     <p>   <a href="https://github.com/carloskruger">  This is a link to my GitHub repository</a></p>
+     <p>   <a href="https://github.com/carloskruger">  My GitHub repository</a></p>
      <br> <br>
-     <p> <a href="https://drive.google.com/file/d/1lVF7at4ew5TdR-Om_4qxZLekK0Xk-SlU/view?usp=sharing">A link to my resume</a></p>
+     <p> <a href="https://drive.google.com/file/d/1lVF7at4ew5TdR-Om_4qxZLekK0Xk-SlU/view?usp=sharing">My resume</a></p>
 </div>
     </div>
 
@@ -45,13 +45,13 @@
     <hr>
 <h2>Projects</h2>
 
-<p><a href="http://tripplanneronline.com/">Trip Planner Project</a> is a project that can help you plan a trip by holding information relevant to the trip such as notes or pictures. You need to sign in. It was created with a node express back-end. It uses React and Redux in the front end and a PostgreSQL database.</p>
+<p><a href="http://tripplanneronline.com/">Trip Planner Project</a> is a project that can help you plan or record your memories of a trip by saving your notes or pictures. You need to sign in. It was created with a Node/Express back-end. It uses React and Redux in the front-end and a PostgreSQL database.</p>
 <br><br>
 <a href="http://tripplanneronline.com/"><img src="img/triplanner.png" alt="Trip Planner" width="400px"/></a>
 <br>
 <br>
 <br>
-<p><a href="https://carloskruger.github.io/aguasdemarte/">Aguas de Marte</a> is a space game written with Canvas. If you want to play it, you will find asteroids which you can destroy by shooting to them by pressing the space key. You can control where you are going by using the up and down arrow keys. Avoid the red bubbles but try to go through the water bubbles.</p>
+<p><a href="https://carloskruger.github.io/aguasdemarte/">Aguas de Marte</a> is a space game written with Canvas. If you want to play it, you will find asteroids, which you can destroy by shooting at them by pressing the space key. You can control where you are going by using the up and down arrow keys. Avoid the red bubbles but try to go through the water bubbles.</p>
 <br><br>
 <a href="https://carloskruger.github.io/aguasdemarte/"><img src="img/aguasdemarte.png" alt="Aguas de Marte" width="400px"/></a>
 </div>
@@ -59,7 +59,7 @@
     <hr>
 <h2>Contact</h2>
 
-<p>My email is: carloskr@yahoo.com</p>
+<p>carloskr@yahoo.com / (914)714-5368</p>
 </div>
 </div>
 </body>
