updated more text

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <img src="img/7E7D07DB-6A26-4D98-94F7-A38CD1CCB782_1_105_c.jpeg" alt="Carlos Kruger" width="300px"/>
 </div>
 <div class="abouttext">
-    <p>My name is Carlos Kruger. I am a full-stack web developer. I have experience working with Node and Java web applications. I started working in technology many years ago in the mainframe area using COBOL. </p>
+    <p>My name is Carlos Kruger. I am a full-stack web developer. I have experience working with Node and Java web applications. My first experience with technology was in mainframe using COBOL</p>
         <br> <br>
      <p>   <a href="https://github.com/carloskruger">  My GitHub repository</a></p>
      <br> <br>
