--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my portfolio</title>
     <link rel="stylesheet" href="./reset.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
  
     <div>
         <hr>
-    <h1>my Portfolio</h1>
+    <h1>my portfolio</h1>
 
     <hr>
     <h2>About</h2>
