--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <br> <br>
      <p>   <a href="https://github.com/carloskruger">  My GitHub repository</a></p>
      <br> <br>
-     <p> <a href="https://drive.google.com/file/d/1hzDFFBnjbDYQL9W7YesrI-x1PxdOI0Iu/view?usp=sharing">My resume</a></p>
+     <p> <a href="https://docs.google.com/document/d/1H1m78KfFsdpbqjboH397BQkVzO8nOY-u_dKsO1teH6k/edit?usp=sharing">My resume</a></p>
 </div>
     </div>
 
